--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "indica-jobs-front",
+  "name": "indica-jobs",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -11,26 +11,25 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~13.0.0",
-    "@angular/cdk": "^13.1.0",
     "@angular/common": "~13.0.0",
     "@angular/compiler": "~13.0.0",
     "@angular/core": "~13.0.0",
     "@angular/forms": "~13.0.0",
-    "@angular/material": "^13.1.0",
     "@angular/platform-browser": "~13.0.0",
     "@angular/platform-browser-dynamic": "~13.0.0",
     "@angular/router": "~13.0.0",
     "bootstrap": "^4.5.3",
     "jquery": "^3.6.0",
-    "ngx-order-pipe": "^2.1.2",
+    "ngx-bootstrap": "^5.5.0",
+    "ngx-order-pipe": "^2.2.0",
     "popper.js": "^1.16.1",
     "rxjs": "~7.4.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~13.0.3",
-    "@angular/cli": "~13.0.3",
+    "@angular-devkit/build-angular": "~13.0.2",
+    "@angular/cli": "~13.0.2",
     "@angular/compiler-cli": "~13.0.0",
     "@types/jasmine": "~3.10.0",
     "@types/node": "^12.11.1",
